...
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="G0p-fH-vpV"/>
                                                        <constraint firstAttribute="width" constant="44" id="dDJ-4V-N3C"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" title="" image="Active"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="Active" title=""/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="tsg-5X-BtZ" eventType="touchUpInside" id="D2x-eD-Td8"/>
                                                    </connections>
                                                </button>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LMa-th-jyW" userLabel="Gradient View">
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="IEi-Dl-PPx" eventType="touchUpInside" id="5bD-Bd-9bg"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dTE-mS-xXS" userLabel="Back Button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav_back_button"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="JH2-YO-xnP"/>
                                    <constraint firstAttribute="height" constant="48" id="m3l-e6-uIA"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                    <constraint firstAttribute="width" constant="60" id="X2z-QM-ZGU"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmC-ES-x6q" userLabel="authButton">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="zlI-w4-caZ"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
