...
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // Для UI-теста!
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        webView.navigationDelegate = self
        presenter?.viewDidLoad() // Теперь запрос идёт через презентер
        
        // Подписка на обновление прогресса
        estimatedProgressObservation = webView.observe(\.estimatedProgress,
...
